[package]
name = "falcon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pqcrypto-falcon-wasi = {version="0.2.14"}
pqcrypto-traits-wasi = {version="0.3.4"}
hex = "0.4.3"
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"
getrandom="0.2.6"

[lib]
crate-type=["cdylib"]
name="falcon"


[features]
default=["getrandom/js"]

############################## OPTIMIZATION STUFF ##############################

# +Use RUSTFLAGS="-C target-cpu=native"

[profile.release]
lto=true
codegen-units=1
incremental=true
strip=true

[profile.release.package."*"]
#lto=true
codegen-units=1
incremental=true
strip=true

# No build scripts, proc macros, and their dependencies,so no more options need

#Wasm settings
#See https://rustwasm.github.io/docs/wasm-pack/cargo-toml-configuration.html

[package.metadata.wasm-pack.profile.release]
wasm-opt=false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false